troubleshooting-advanced/05-networkpolicy-block/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: troubleshoot-adv
  labels:
    app: client
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.6.0
      command: ["/bin/sh", "-c", "sleep 3600"]
