troubleshooting-advanced/05-networkpolicy-block/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: troubleshoot-adv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: troubleshoot-adv
spec:
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 80
